--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="../graphics/img/palms.jpg" alt="Florida Palm Trees" width="1600" height="900">
+        <img src="../graphics/img/palms_1600_900.jpg" alt="Florida Palm Trees" width="1600" height="900">
         <div class="carousel-caption">
           <h3>Integrated STEAM and 3D Graphics Specialist</h3>
-          <p>Interdisciplinary Research and Development Background related to Integration of Science, Technology, Engineering, Arts, Mathematics, and Education.</p>
+          <p>Interdisciplinary Research and Development Background related to Integration of Science, Technology, Engineering, Arts, Mathematics, and Education</p>
         </div>      
       </div>
 
@@ -208,17 +208,97 @@
         <img src="../graphics/img/video/prescribedFire_1600_900.jpg" alt="TallTimbers" width="1600" height="900">
         <div class="carousel-caption">
           <h3>Perspectives Videos</h3>
-          <p>Producer/Director for hundreds of short-format STEM documentary-style videos.</p>
+          <p>Producer/Director for hundreds of short-format STEM documentary-style videos</p>
+        </div>      
+      </div>
+
+      <div class="item">
+        <img src="../graphics/img/sim/densityMap_1600_900.jpg" alt="TallTimbers" width="1600" height="900">
+        <div class="carousel-caption">
+          <h3>Simulation Interface Design</h3>
+          <p>Former Front-end Developer for Homeland Security Project Interfaces</p>
         </div>      
       </div>
     
       <div class="item">
-        <img src="../graphics/img/video/prescribedFire_1600_900.jpg" alt="TallTimbers" width="1600" height="900">
+        <img src="../graphics/img/ceramics/preBisque_1600_900.jpg" alt="Ceramics" width="1600" height="900">
         <div class="carousel-caption">
-          <h3>Perspectives Videos</h3>
-          <p>Producer/Director for hundreds of short-format STEM documentary-style videos.</p>
+          <h3>Ceramics Craftsman</h3>
+          <p>Over 15 years creating original stoneware ceramics</p>
         </div>     
       </div>
+
+      <div class="item">
+        <img src="../graphics/img/ceramics/pitchers_1600_900.jpg" alt="Ceramics" width="1600" height="900">
+        <div class="carousel-caption">
+          <h3>Ceramics Craftsman</h3>
+          <p>Over 15 years creating original stoneware ceramics</p>
+        </div>     
+      </div>
+
+      <div class="item">
+        <img src="../graphics/img/photography/flowers_1600_900.jpg" alt="Nature" width="1600" height="900">
+        <div class="carousel-caption">
+          <h3>Nature Photographer</h3>
+          <p>Interested in the often overlooked aspects of the outdoors</p>
+        </div>     
+      </div>
+
+      <div class="item">
+        <img src="../graphics/img/photography/jewelweed_1600_900.jpg" alt="Nature" width="1600" height="900">
+        <div class="carousel-caption">
+          <h3>Nature Photographer</h3>
+          <p>Interested in the often overlooked aspects of the outdoors</p>
+        </div>     
+      </div>
+
+      <div class="item">
+        <img src="../graphics/img/photography/caterpillar_1600_900.jpg" alt="Nature" width="1600" height="900">
+        <div class="carousel-caption">
+          <h3>Nature Photographer</h3>
+          <p>Interested in the often overlooked aspects of the outdoors</p>
+        </div>     
+      </div>
+
+      <div class="item">
+        <img src="../graphics/img/photography/palmScene_1600_900.jpg" alt="Nature" width="1600" height="900">
+        <div class="carousel-caption">
+          <h3>Nature Photographer</h3>
+          <p>Interested in the often overlooked aspects of the outdoors</p>
+        </div>     
+      </div>
+
+      <div class="item">
+        <img src="../graphics/img/photography/equisetum_1600_900.jpg" alt="Nature" width="1600" height="900">
+        <div class="carousel-caption">
+          <h3>Nature Photographer</h3>
+          <p>Interested in the often overlooked aspects of the outdoors</p>
+        </div>     
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
 
     <!-- Left and right controls -->
