--- a/index.html
+++ b/index.html
@@ -282,22 +282,29 @@
 <div id="about" class="container text-center">
   <h3>About Me</h3>
   <p><em>Science | Interactive 3D Graphics | Art | Gaming | Technology | Education</em></p>
+  <p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/">LinkedIn</a> | <a href="https://www.researchgate.net/profile/Adam_Santone">ResearchGate</a></p>
+  <p>
+	<a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-color/In-2C-21px-R.png" align="left"></a>
+	<br/>
+	<a href="https://www.researchgate.net/profile/Adam_Santone"><img src="graphics/icons/researchGate/rg_180.png" align="left" height="21" width="21" ></a>
+  </p> 
   <p>
 	Interdisciplinary researcher/developer with experience in quantitative and qualitative research for interactive 3D computer graphics, human spatial ability, data visualization, virtual and augmented reality, serious games, 3D modeling and printing, documentary-style video production and direction, statistical analysis, and K-12 STEM outreach for teacher professional development. Experience connecting people at local, municipal, state, and federal levels to ensure project success. Extensive background in life sciences including plant physiology and molecular biology with associated laboratory techniques. Career interests include human-computer interactions and interfaces, applications of human spatial ability research to gaming and immersive educational experiences, data science and data-driven decision making, advanced data perception methodologies, technology integration for K-12 education, life science outreach, and public informal STEM education.
   </p>
 </div> <!--end Container section-->
 
+
 <div id="reviews" class="container">
   <h3 class="text-center">Reviews</h3>  
   <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#home">Reviewer One</a></li>
+    <li class="active"><a data-toggle="tab" href="#home">David Whittinghill, PhD</a></li>
     <li><a data-toggle="tab" href="#menu1">Reviewer Two </a></li>
     <li><a data-toggle="tab" href="#menu2">Reviewer Three</a></li>
   </ul>
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
-      <h2>Reviewer One, Relationship</h2>
-      <p>Review One.</p>
+      <h2>David Whittinghill, PhD. Former Colleague.</h2>
+      <p>Adam and I studied together at Purdue University in the then-nascent field of virtual reality. Adam was consistently out in front on the vision side of things, able to conceptualize applications for our technology that were not only interesting but useful. He has that rare combination of energetic creativity coupled with rigorous technical skills. During our studies he was as comfortable working through difficult statistical proofs as he was sketching animated characters for a game. Further, his background in the life sciences provides him a researcher's eye for logic, critical thinking, and managing complex, interacting systems. He is also a tireless collaborator, willing to put in the hours required to make a difficult project successful. Lastly, he is friendly, funny, and personable - an outstanding team member who is a pleasure to work with.</p>
     </div>
     <div id="menu1" class="tab-pane fade">
       <h2>Reviewer Two</h2>
