--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
 
 <div id="reviews" class="container">
-  <h3 class="text-center">Reviews</h3>  
+  <h3 class="text-center">Sample Reviews</h3>  
   <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#home">David Whittinghill, PhD | Purdue University</a></li>
     <li><a data-toggle="tab" href="#menu1">Bud Simpson, Independent Filmmaker</a></li>
@@ -301,11 +301,11 @@
       <p>Adam and I studied together at Purdue University in the then-nascent field of virtual reality. Adam was consistently out in front on the vision side of things, able to conceptualize applications for our technology that were not only interesting but useful. He has that rare combination of energetic creativity coupled with rigorous technical skills. During our studies he was as comfortable working through difficult statistical proofs as he was sketching animated characters for a game. Further, his background in the life sciences provides him a researcher's eye for logic, critical thinking, and managing complex, interacting systems. He is also a tireless collaborator, willing to put in the hours required to make a difficult project successful. Lastly, he is friendly, funny, and personable - an outstanding team member who is a pleasure to work with.</p>
     </div>
     <div id="menu1" class="tab-pane fade">
-      <p>Adam's greatest strength is his ability to work with others. He carries an enthusiasm for his work that’s contagious and improves the work (and attitudes) of those around him. I never had a disagreement with Adam during the two years that we worked closely together. He has a great way of making those around him feel valued and appreciated for their contribution to the effort. </p>
+      <p>Adam's greatest strength is his ability to work with others. He carries an enthusiasm for his work that's contagious and improves the work (and attitudes) of those around him. I never had a disagreement with Adam during the two years that we worked closely together. He has a great way of making those around him feel valued and appreciated for their contribution to the effort. </p>
     </div>
     <div id="menu2" class="tab-pane fade">
       	<p>I have been impressed with his commitment to excellence. In every activity he undertook, Adam ensured he understood his role and how what he did fit into the goal of the program and in the organization. His work ethic was recognized and much admired by all of his colleagues.</p>
-	<p>I cannot write a reference for Adam without mention of one of his passions – personal development linked with commitment to successful outcomes for himself and those with whom he worked. He can be defined as one who is perpetually striving to improve performance. I have had many discussions with him and have found him well informed and current in his discipline/interests. He formulates his opinions based on information gathered from researching a topic. He is thorough.</p>
+	<p>I cannot write a reference for Adam without mention of one of his passions - personal development linked with commitment to successful outcomes for himself and those with whom he worked. He can be defined as one who is perpetually striving to improve performance. I have had many discussions with him and have found him well informed and current in his discipline/interests. He formulates his opinions based on information gathered from researching a topic. He is thorough.</p>
 	<p>It is my belief that you can be assured that he will be as highly committed, work well with others, will be engaged immediately in enabling any team to pursue continuing excellence for future advancement. I recommend Adam, without any reservation.</p>
     </div>
   </div>
